--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="styles.css" rel="stylesheet">
+	<link href="style.css" rel="stylesheet">
 	<title>Austerity Party Party</title>
 </head>
 <body>
