add new site pages and styles

--- a/index.html
+++ b/index.html
@@ -3,14 +3,46 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="style.css" rel="stylesheet">
-	<title>Austerity Party Party</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<title>Home | Austerity Party Party</title>
 </head>
 <body>
-  <div class="container">
-    <div class="image austerity"></div>
-    <div class="image party"></div>
-    <div class="image party"></div>
-  </div>
+
+	<section class="home">
+		<div id="hero" class="position-relative">
+			<img src="./assets/images/home/home_hero.webp">
+		</div>
+
+		<header>
+			<nav>
+				<a href="./about.html" class="about d-flex align-center">About</a>
+			</nav>
+		</header>
+
+		<article>
+
+			<h1>Austerity Party Party</h1>
+
+			<div class="position-relative">
+				<a href="29_hearts.html"><img class="hearts book-img" src="./assets/images/home/home_29-hearts-overlay.png"></a>
+
+				<a href="./the_lie.html"><img class="lie book-img" src="./assets/images/home/home_the-lie-overlay.png"></a>
+			</div>
+			
+
+		</article>
+	</section>
+
+	<footer class="d-flex align-center">
+		<a href="./index.html">Home</a>
+		<a href="./about.html">About</a>
+		<a href="./order.html">Order</a>
+	</footer>
+
+	<script src="https://code.jquery.com/jquery-3.7.1.slim.min.js" integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8=" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
